<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#834242"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Difficulty">


    <TextView
        android:id="@+id/textView"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/diff_choose"
        android:textColor="#02467C"
        android:textStyle="bold" />

    <Button
        android:id="@+id/diff_2x2"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:onClick="startTwo"
        android:text="@string/diff_2x2" />

    <Button
        android:id="@+id/diff_4x4"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#673AB7"
        android:onClick="startFour"
        android:text="@string/diff_4x4" />

    <Button
        android:id="@+id/diff_6x6"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:onClick="startSix"
        android:text="@string/diff_6x6" />

</LinearLayout>